@@ -18,7 +18,7 @@ export(get.graph.attribute, set.graph.attribute,
 export(V, E, "$.igraph.vs", "$.igraph.es",
        "[.igraph.vs", "[.igraph.es", "[<-.igraph.vs", "[<-.igraph.es",
        "$<-.igraph.vs", "$<-.igraph.es", "V<-", "E<-",
-       print.igraph.vs, print.igraph.es)
+       print.igraph.vs, print.igraph.es, "%--%", "%->%", "%<-%")
 
 S3method("$", igraph.vs)
 S3method("[", igraph.vs)
